kubernetes/udp-collector/dev/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-ingress
    component: controller
    heritage: Tiller
    release: nginx-ingress
  name: nginx-ingress-controller
  namespace: kube-system
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: udp-server
    port: 9331
    targetPort: 9331
    protocol: UDP
  selector:
    app: nginx-ingress
    component: controller
    release: nginx-ingress
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
