kubernetes/udp-collector/dev/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     ingress.kubernetes.io/default-backend: default/udp-server
#     nginx.ingress.kubernetes.io/default-backend: default/udp-server
spec:
  backend:
    serviceName: udp-server
    servicePort: 9331
